...
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.spacedBy(12.dp),
        ) {
            FoliaryCheckbox(
                checked = task.isCompleted,
                onCheckedChange = onCompletedChange,
                modifier = Modifier.testTag("FoliaryTaskCard:Checkbox"),
            )

            FoliaryTaskCardContent(
                task = task,
                modifier = Modifier.weight(1f),
            )
...
